--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="text-container">
-                        <p>
+                        <p>test
                                With more than two years of frontend development skills, I am a dedicated and precise web developer. 
                             I guarantee smooth and interesting web interfaces because to my expertise in HTML and CSS. Furthermore, 
                             I have a basic understanding of PHP, Git, SASS, JavaScript, TypeScript, Material UI, MYSQL, PostgreSQL,
